--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,3 @@
 language: nix
-script: nix-shell update.nix
+script:
+  - if [ "$TRAVIS_EVENT_TYPE" == "cron" ]; then nix-shell update.nix --pure; fi
